--- a/src/src/style.css
+++ b/src/src/style.css
@@ -1,13 +1,43 @@
+@font-face {
+    font-family: "8-bit-pusab";
+    src: url("assets/fonts/8-bit-pusab_18.ttf");
+}
+
+@font-face {
+    font-family: "Videotype";
+    src: url("assets/fonts/videotype_34.ttf");
+}
+
+@font-face {
+    font-family: "TECHKR";
+    src: url("assets/fonts/TECHKR_24.ttf");
+}
+
 html,
 body {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: black;
-  color: darkgreen;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+    color: #fff;
+    font-family: "8-bit-pusab";
 }
 
 canvas {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    position: fixed; /* Keeps the footer at the bottom */
+    bottom: 0; /* Aligns it to the bottom of the viewport */
+    width: 100%; /* Full width */
+    background-color: #333333;
+}
+
+.copyright {
+    color: #fff;
+    line-height: 40px;
+    font-size: 1em;
+    text-align: center;
 }
