Testing action workflows.

--- a/src/src/style.css
+++ b/src/src/style.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: "TECHKR";
-    src: url("/assets/fonts/TECHKR_24.ttf") format("ttf");
+    src: url("/assets/fonts/techkr_24.ttf") format("ttf");
 }
 
 html,
