--- a/src/src/style.css
+++ b/src/src/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: "8-bit-pusab";
-    src: url("./assets/fonts/8-bit-pusab_18.ttf") format("ttf");
+    src: url("./assets/fonts/8-bit-pusab_18.ttf");
 }
 
 @font-face {
     font-family: "Videotype";
-    src: url("./assets/fonts/videotype_34.ttf") format("ttf");
+    src: url("./assets/fonts/videotype_34.ttf");
 }
 
 html,
